small refactors